Fix button styling on safari

--- a/ui/static/app.css
+++ b/ui/static/app.css
@@ -42,6 +42,8 @@ header {
 
 button {
   appearance: none;
+  -webkit-appearance: none;
+  display: block;
 }
 
 .mt { margin-block-start: 10px; }
@@ -122,7 +124,10 @@ button {
   background-color: var(--unattempted);
   display: flex;
   width: 25px;
-  place-content: center;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  padding-inline: 5px;
 }
 
 #keyboard button[value="backspace"] {
